api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bag-api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bag-api-v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: bag-api-v1
    spec:
      containers:
      - name: bag-api-v1
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /bag/api/v1/health/liveness
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /bag/api/v1/health/readiness
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
